@@ -2,86 +2,18 @@ TOP = .
 
 include $(TOP)/mk/config.mk
 
-# Making the different subdirectories unfortunately cannot be automated. There
-# are several interdependencies that cannot easily be detected:
-# - all for e.g. mogul/ requires that gtk/ is locally installed (inplace)
-# - install requires that the modules are not locally installed, otherwise
-#   gtk-pkg complains that the module is already installed (fix: omit the
-#   local package file in those cases)
-# - uninstall should remove the packages in reverse order, so that the system
-#   is always in a consistent state if something goes wrong
-# - sometimes we build the local c2hs, sometimes we don't
+MAKE_TOOLS = c2hs tools/typehier tools/signals
 
-all	: inplace
-
-inplace : noinplace
-ifeq ($(BUILT_IN_C2HS),yes)
-	$(MAKE) -Cc2hs $@
-endif
-	$(MAKE) -Cgtk $@ 
-ifeq ($(ENABLE_SOURCEVIEW), yes)
-	$(MAKE) -Csourceview $@
-endif
-	$(MAKE)	-Cmogul $@ 
-ifeq ($(BUILDDOCS),yes)
-	$(MAKE) -Cdoc all
+ifeq ($(strip $(BUILDDOCS)),no)
+MAKE_VERB  =  gendoc doc
+else
+MAKE_TOOLS  +=  gendoc doc
 endif
 
-noinplace :
-	$(MAKE) -Cmogul $@ 
-	$(MAKE) -Cgtk $@
+MAKE_LIBS  = gtk sourceview mogul
 
-demo : noinplace
-	$(MAKE) -Cdemo/concurrent $@ 
-	$(MAKE) -Cdemo/treeList $@ 
-	$(MAKE) -Cdemo/graphic $@ 
-	$(MAKE) -Cdemo/unicode $@ 
-	$(MAKE) -Cdemo/hello $@ 
-ifeq ($(ENABLE_SOURCEVIEW), yes)
-	$(MAKE) -Cdemo/sourceview $@
-endif
-
-install install-without-pkg : all
-	$(MAKE) -Cgtk  $@
-	$(MAKE) -Cmogul  $@
-
-uninstall :
-	$(MAKE) -Cmogul  $@
-	$(MAKE) -Cgtk  $@
-
-clean	: noinplace
-ifeq ($(BUILT_IN_C2HS),yes)
-	$(MAKE) -Cc2hs $@
-endif
-	$(MAKE) -Cgtk $@
-	$(MAKE) -Cmogul $@
-	$(MAKE) -Cdemo/hello $@ 
-	$(MAKE) -Cdemo/unicode $@ 
-	$(MAKE) -Cdemo/graphic $@ 
-	$(MAKE) -Cdemo/treeList $@ 
-	$(MAKE) -Cdemo/concurrent $@ 
-ifeq ($(ENABLE_SOURCEVIEW), yes)
-	$(MAKE) -Cdemo/sourceview $@
-	$(MAKE) -Csourceview $@
-endif
-ifeq ($(BUILDDOCS),yes)
-	$(MAKE) -Cdoc $@
-endif
-
-
-distclean : clean
-ifeq ($(BUILT_IN_C2HS),yes)
-	$(MAKE) -Cc2hs $@
-endif
-	$(MAKE) -Cgtk $@
-	$(MAKE) -Cmogul $@
-	$(MAKE) -Cdemo/hello $@ 
-	$(MAKE) -Cdemo/unicode $@ 
-	$(MAKE) -Cdemo/graphic $@ 
-	$(MAKE) -Cdemo/treeList $@ 
-	$(MAKE) -Cdemo/concurrent $@ 
-	$(MAKE) -Cdemo/sourceview $@
-	$(MAKE) -Csourceview $@
+MAKE_APPS  = demo/concurrent demo/treeList demo/graphic demo/unicode \
+	     demo/hello
 
 EXTRA_TARFILES = $(strip AUTHORS COPYING.LIB ChangeLog INSTALL Makefile \
 			 TODO VERSION aclocal.m4 acinclude.m4 \
@@ -96,18 +28,7 @@ dist :
 	$(LN) . $(TARNAME)
 	$(strip $(TAR) cf $(addsuffix .tar,$(TARNAME)) \
 	  $(addprefix $(TARNAME)/,$(EXTRA_TARFILES)))
-	$(MAKE) -Cc2hs tarsource
-	$(MAKE) -Cgtk tarsource
-	$(MAKE) -Csourceview tarsource
-	$(MAKE) -Cmogul tarsource
-	$(MAKE) -Cdemo/hello tarsource
-	$(MAKE) -Cdemo/unicode tarsource
-	$(MAKE) -Cdemo/graphic tarsource
-	$(MAKE) -Cdemo/treeList tarsource
-	$(MAKE) -Cdemo/concurrent tarsource
-	$(MAKE) -Cdemo/sourceview tarsource
-	$(MAKE) -Cgendoc tarsource
-	$(MAKE) -Cdoc tarsource
+	$(MAKE) tarsource
 	$(GZIP) $(TARNAME).tar
 	$(RM) $(TARNAME)
 
@@ -119,3 +40,5 @@ srpm: gtk2hs.spec dist
 
 gtk2hs.spec: VERSION gtk2hs.spec.in
 	./configure
+
+include $(TOP)/mk/recurse.mk
